--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -25,8 +25,8 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab3" [class.active]="activeTab === 'tab3'" href="/tabs/tab3">
-      <ion-icon name="settings-outline"></ion-icon>
-      <ion-label>Settings</ion-label>
+      <ion-icon name="flame"></ion-icon>
+      <ion-label>Discover</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
