Add movie discovery feature with HTTP client integration; update UI for movie display

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,3 +1,12 @@
 <ion-content [fullscreen]="true">
-  
+    <div class="container">
+        <h1 class="title">Discover</h1>
+        <div class="movie-grid">
+            <div *ngFor="let movie of movies" class="movie-card">
+                <img [src]="'https://image.tmdb.org/t/p/w500' + movie.poster_path" alt="{{ movie.title }}">
+                <h3>{{ movie.title }}</h3>
+                <p>⭐ {{ movie.vote_average.toFixed(1) }}</p>
+            </div>
+        </div>
+    </div>
 </ion-content>
