Add Swiper integration and movie detail modal; update styles and variables

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -2,10 +2,11 @@
     <div class="container">
         <h1 class="title">Discover</h1>
         <div class="movie-grid">
-            <div *ngFor="let movie of movies" class="movie-card">
+            <div *ngFor="let movie of movies" class="movie-card" (click)="openMovieDetails(movie.id)">
                 <img [src]="'https://image.tmdb.org/t/p/w500' + movie.poster_path" alt="{{ movie.title }}">
-                <h3>{{ movie.title }}</h3>
-                <p>⭐ {{ movie.vote_average.toFixed(1) }}</p>
+                <div class="overlay">
+                    <h3>{{ movie.title }}</h3>
+                </div>
             </div>
         </div>
     </div>
