--- a/src/global.scss
+++ b/src/global.scss
@@ -36,6 +36,7 @@
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
+@import "theme/variables.scss";
 
 body {
     font-family: 'Bebas Neue', sans-serif;
