--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -6,6 +6,13 @@
     --ion-tab-bar-background: #000000;
     --ion-tab-bar-color: #ffffff;
     --ion-tab-bar-color-selected: #db0000;
+
+    --ion-color-custom-red: #db0000;
+    --ion-color-custom-red-rgb: 219, 0, 0;
+    --ion-color-custom-red-contrast: #ffffff;
+    --ion-color-custom-red-contrast-rgb: 255, 255, 255;
+    --ion-color-custom-red-shade: #c30000;
+    --ion-color-custom-red-tint: #e61919;
 }
 
 ion-content {
