Remove unused image assets and update styles for search and movie detail components

--- a/src/app/movie-search-modal/movie-search-modal.component.html
+++ b/src/app/movie-search-modal/movie-search-modal.component.html
@@ -1,32 +1,25 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Search Movies</ion-title>
-    <ion-buttons slot="end">
-      <ion-button class="close-button" fill="clear" (click)="dismiss()">
-        <ion-icon slot="icon-only" name="close-outline"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
   <div class="search-container">
-    <ion-item>
-      <ion-input placeholder="Search for a movie" [(ngModel)]="searchQuery"></ion-input>
-      <ion-icon slot="end" (click)="searchMovies()" name="search"></ion-icon>
-    </ion-item>
+    <!-- Search Bar -->
+    <div class="search-bar">
+      <ion-input placeholder="Search for a movie" [(ngModel)]="searchQuery" clearInput
+        (ionInput)="searchMovies()"></ion-input>
+      <ion-icon class="search-icon" name="search-outline" (click)="searchMovies()"></ion-icon>
+    </div>
 
     <!-- Movie Grid -->
     <div *ngIf="filteredMovies.length > 0" class="movies-grid">
       <div *ngFor="let movie of filteredMovies" class="movie-card" (click)="addMovie(movie)">
-        <img [src]="movie.poster" alt="{{ movie.title }}">
+        <img
+          [src]="movie.poster_path !== 'assets/placeholder.png' ? 'https://image.tmdb.org/t/p/w200' + movie.poster_path : movie.poster_path"
+          alt="{{ movie.title }}" />
         <p>{{ movie.title }}</p>
       </div>
     </div>
 
-    <!-- No Results Message -->
-    <p *ngIf="filteredMovies.length === 0 && searchQuery.trim() !== ''" class="no-results">
+    <!-- No Results -->
+    <div *ngIf="filteredMovies.length === 0 && searchQuery.trim() !== ''" class="no-results">
       No movies found.
-    </p>
+    </div>
   </div>
 </ion-content>
