--- a/src/app/movie-detail-modal/movie-detail-modal.component.html
+++ b/src/app/movie-detail-modal/movie-detail-modal.component.html
@@ -4,10 +4,14 @@
   </ion-button>
 
   <div class="hero">
-    <img class="hero-backdrop" [src]="'https://image.tmdb.org/t/p/original' + movie.backdrop_path" alt="Backdrop" />
+    <img
+      [src]="movie.backdrop_path == null ? 'assets/placeholder.png' : 'https://image.tmdb.org/t/p/original' + movie.backdrop_path"
+      alt="Backdrop" class="hero-backdrop" />
     <div class="hero-overlay"></div>
     <div class="hero-content">
-      <img class="poster" [src]="'https://image.tmdb.org/t/p/w300/' + movie.poster_path" alt="Poster" />
+      <img
+        [src]="movie.poster_path == null ? 'assets/placeholder.png' : 'https://image.tmdb.org/t/p/w300/' + movie.poster_path"
+        alt="{{ movie.title }}" class="poster" />
       <div class="hero-info">
         <h1 class="movie-title">{{ movie.title }}</h1>
         <div class="meta-row">
