Add back button to movie search modal and implement movie detail modal opening functionality

--- a/src/app/movie-search-modal/movie-search-modal.component.html
+++ b/src/app/movie-search-modal/movie-search-modal.component.html
@@ -1,4 +1,7 @@
 <ion-content>
+  <ion-button class="back-btn" fill="clear" (click)="dismiss()">
+    <img src="assets/back.svg" alt="Back" class="back-svg" />
+  </ion-button>
   <div class="search-container">
     <div class="search-bar">
       <ion-input placeholder="Search for a movie" [(ngModel)]="searchQuery" clearInput
