--- a/src/app/movie-detail-modal/movie-detail-modal.component.html
+++ b/src/app/movie-detail-modal/movie-detail-modal.component.html
@@ -155,7 +155,7 @@
   <div class="recommendations-section" *ngIf="topRecommendations?.length">
     <h2 class="section-title">Recommendations</h2>
     <div class="horizontal-scroll">
-      <div class="movie-card" *ngFor="let rec of topRecommendations">
+      <div class="movie-card" *ngFor="let rec of topRecommendations" (click)="openRecommendedMovie(rec)">
         <img [src]="'https://image.tmdb.org/t/p/w200' + rec.poster_path" [alt]="rec.title" />
       </div>
     </div>
