--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -10,7 +10,7 @@
 
         <h2>Application Settings</h2>
 
-        <ion-row>
+        <!-- <ion-row>
             <ion-col size="9">
                 <ion-item>
                     <ion-input label="Name" labelPlacement="stacked" placeholder="Rose Miller"
@@ -37,7 +37,7 @@
             <ion-button slot="end" (click)="deleteUser(user)" fill="clear" color="danger">
                 <ion-icon name="trash" slot="icon-only"></ion-icon>
             </ion-button>
-        </ion-item>
+        </ion-item> -->
 
         <!-- TMDB API Key Setting -->
         <ion-card>
