--- a/src/app/components/tab3/tab3.page.html
+++ b/src/app/components/tab3/tab3.page.html
@@ -2,7 +2,8 @@
     <div class="container">
         <div class="movie-grid">
             <div *ngFor="let movie of movies" class="movie-card" (click)="openMovieDetails(movie.id)">
-                <img [src]="'https://image.tmdb.org/t/p/w500' + movie.poster_path" alt="{{ movie.title }}">
+                <img [src]="movie.poster_path == null ? 'assets/placeholder.png' : 'https://image.tmdb.org/t/p/w300/' + movie.poster_path"
+                    alt="{{ movie.title }}" class="poster" />
                 <div class="overlay">
                     <h3>{{ movie.title }}</h3>
                 </div>
