--- a/src/global.scss
+++ b/src/global.scss
@@ -9,6 +9,9 @@
  * https://ionicframework.com/docs/layout/global-stylesheets
  */
 
+ /* Updated to use new Sass module system */
+@use "theme/variables" as *;
+
 /* Core CSS required for Ionic components to work properly */
 @import "@ionic/angular/css/core.css";
 
@@ -36,7 +39,6 @@
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
-@import "theme/variables.scss";
 
 body {
     font-family: 'Bebas Neue', sans-serif;
@@ -54,5 +56,4 @@ ion-content {
     /* your theme red */
     --color: #ffffff;
     /* text color */
-    /* or any other CSS variables for toast: e.g. --border-radius, etc. */
 }
