--- a/src/app/components/tabs/tabs.page.html
+++ b/src/app/components/tabs/tabs.page.html
@@ -5,6 +5,12 @@
     </ion-title>
 
     <ion-buttons slot="end">
+      <ion-button (click)="openSearchModal()">
+        <ion-icon slot="icon-only" name="search-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
+    <ion-buttons slot="end">
       <ion-button (click)="openSettings()">
         <ion-icon slot="icon-only" name="settings-outline"></ion-icon>
       </ion-button>
